# WAV-Sound-Processor

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: FetchBoostContent.cmake
example/: LICENSE.md  config.txt  district_four.txt  funkorama.txt  incorrect_config.txt  main.cpp  severe_tire_damage.txt
lib/WAV/: CMakeLists.txt
lib/WAV/include/: WAV_errors.h  WAV_reader.h  WAV_writer.h
lib/WAV/include/WAV/: WAV.h  WAV_errors.h  WAV_reader.h  WAV_types.h  WAV_writer.h
lib/WAV/src/: WAV.cpp  WAV_errors.cpp  WAV_reader.cpp  WAV_writer.cpp
lib/WAV/test/: tests_WAV.cpp
lib/WAV/test/files/: license.md
lib/cl_parser/: CMakeLists.txt
lib/cl_parser/config/: converters_desc.json
lib/cl_parser/include/: cl_parser.h.in  cl_parser_errors.h
lib/cl_parser/include/cl_parser/: cl_parser.h  cl_parser_errors.h
lib/cl_parser/src/: cl_parser.cpp  cl_parser_errors.cpp
lib/cl_parser/test/: tests_cl_parser.cpp
lib/config_parser/: CMakeLists.txt
lib/config_parser/include/: config_parser.h
lib/config_parser/include/config_parser/: config_parser.h  config_parser_errors.h
lib/config_parser/src/: config_parser.cpp  config_parser_errors.cpp
lib/config_parser/test/: tests_config_parser.cpp
lib/config_parser/test/files/: correct.txt  correct_with_comment.txt  incorrect_link.txt  incorrect_params.txt  only_comment.txt
lib/converter/: CMakeLists.txt
lib/converter/converter_creator/: CMakeLists.txt
lib/converter/converter_creator/include/: converter_creator_errors.h
lib/converter/converter_creator/src/: converter_creator.cpp  converter_creator_errors.cpp
lib/converter/converter_creator/test/: tests_converter_creator.cpp
lib/converter/converter_errors/: CMakeLists.txt
lib/converter/converter_errors/include/: converter_errors.h
lib/converter/converter_errors/src/: converter_errors.cpp
lib/converter/converter_interface/: CMakeLists.txt
lib/converter/converter_interface/include/: converter_interface.h
lib/converter/double/: CMakeLists.txt
lib/converter/double/config/: converter_desc.json
lib/converter/double/include/: double.h
lib/converter/double/src/: double.cpp
lib/converter/double/test/: tests_double.cpp
lib/converter/mix/: CMakeLists.txt
lib/converter/mix/config/: converter_desc.json
lib/converter/mix/include/: mix.h
lib/converter/mix/include/mix/: mix.h
lib/converter/mix/src/: mix.cpp
lib/converter/mix/test/: tests_mix.cpp
lib/converter/mute/: CMakeLists.txt
lib/converter/mute/config/: converter_desc.json
lib/converter/mute/include/: mute.h
lib/converter/mute/include/mute/: mute.h  mute_errors.h
lib/converter/mute/src/: mute.cpp  mute_errors.cpp
lib/converter/mute/test/: tests_mute.cpp
lib/converters/: CMakeLists.txt
lib/converters/include/converter_creator/: converter_creator.h
lib/converters/include/converter_interface/: converter_errors.h  converter_interface.h
lib/converters/include/mix/: mix.h
lib/converters/include/mute/: mute.h
lib/converters/src/: converter_creator.cpp  converter_errors.cpp  mix.cpp  mute.cpp
lib/converters/test/: tests_mix.cpp  tests_mute.cpp
lib/iostream_errors/: CMakeLists.txt
lib/iostream_errors/include/: iostream_errors.h
lib/iostream_errors/src/: iostream_errors.cpp
lib/sound_processor/: CMakeLists.txt
lib/sound_processor/include/: sound_processor.h  sound_processor_errors.h
lib/sound_processor/include/sound_processor/: sound_processor.h
lib/sound_processor/src/: sound_processor.cpp  sound_processor_errors.cpp
lib/sound_processor/test/: tests_sound_processor.cpp
lib/sound_processor/test/file/: config.txt
lib/sound_processor/test/files/: config.txt
src/: main.cpp
